Setup inital Header component

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import "../src/assets/fonts/fonts.css";
 
 body {
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    font-family: 'Roboto Standard', Arial, Helvetica, sans-serif;
 }
