--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -49,7 +49,7 @@ a {
   color: hsl(0, 0%, 100);
   border: none;
   border-radius: 5%;
-  font-family: "Roboto Bold";
+  font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
 }
 
 .login-action-button {
@@ -59,5 +59,5 @@ a {
   color: hsl(0, 0%, 0);
   border: 1px solid hsl(0, 0%, 0);
   border-radius: 5%;
-  font-family: "Roboto Bold";
+  font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
 }
