--- a/src/components/common/Form/Buttons/Buttons.scss
+++ b/src/components/common/Form/Buttons/Buttons.scss
@@ -6,6 +6,14 @@
   border: none;
   border-radius: 5%;
   font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
+  cursor: grab;
+  transition: all 1s ease;
+  transform: scale(1);
+}
+
+.sign-up-action-button:hover {
+  cursor: pointer;
+  background: hsl(0, 0%, 25);
 }
 
 .login-action-button {
@@ -16,4 +24,11 @@
   border: 1px solid hsl(0, 0%, 0);
   border-radius: 5%;
   font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
+  transition: all 1s ease;
+  transform: scale(1);
+}
+
+.login-action-button:hover {
+  cursor: pointer;
+  background: hsl(0, 0%, 85);
 }
