--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -11,6 +11,9 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 20;
 }
 
 .main-header {
