--- a/src/pages/Homepage/Home.scss
+++ b/src/pages/Homepage/Home.scss
@@ -43,25 +43,20 @@
   animation: homepage-actionmenu 3s;
 }
 
-.sign-up-action-button-content {
-  height: 65px;
-  width: 250px;
-  background-color: hsl(0, 0%, 100);
-  color: hsl(0, 0%, 0);
-  border: 1px solid hsl(0, 0%, 0);
-  border-radius: 5%;
-  font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
-  margin-right: 30px;
-}
-
+.sign-up-action-button-content,
 .login-action-button-content {
   height: 65px;
   width: 250px;
   background-color: hsl(0, 0%, 100);
   color: hsl(0, 0%, 0);
   border: 1px solid hsl(0, 0%, 0);
-  border-radius: 5%;
+  border-radius: 10px;
   font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
+  cursor: pointer;
+}
+
+.sign-up-action-button-content {
+  margin-right: 30px;
 }
 
 .action-text-main,
