--- a/src/components/common/Form/Buttons/EmailLoginButton/EmailLoginButton.scss
+++ b/src/components/common/Form/Buttons/EmailLoginButton/EmailLoginButton.scss
@@ -1,4 +1,4 @@
-.google-button-login {
+.email-login-button {
   height: 55px;
   width: 250px;
   display: flex;
@@ -9,11 +9,7 @@
   font-size: 18px;
 }
 
-.google-button-icon {
+.email-button-icon {
   font-size: 40px;
-  padding-right: 20px;
-}
-
-.google-button-icon {
-  padding-right: 40px;
+  padding-right: 45px;
 }
