--- a/src/pages/LoginPage/LoginPage.scss
+++ b/src/pages/LoginPage/LoginPage.scss
@@ -54,7 +54,7 @@
   padding-left: 20px;
 }
 
-.register-container {
+.alternative-register-container {
   display: flex;
   justify-content: center;
 }
