--- a/src/components/common/Form/Buttons/Buttons.scss
+++ b/src/components/common/Form/Buttons/Buttons.scss
@@ -1,10 +1,10 @@
 .sign-up-action-button {
   height: 47px;
   width: 112.25px;
-  background-color: hsl(0, 0%, 0);
+  background-color: rgb(0, 0, 0);
   color: hsl(0, 0%, 100);
   border: none;
-  border-radius: 5%;
+  border-radius: 10px;
   font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
   cursor: grab;
   transition: all 1s ease;
@@ -20,9 +20,9 @@
   height: 47px;
   width: 112.25px;
   background-color: hsl(0, 0%, 100);
-  color: hsl(0, 0%, 0);
-  border: 1px solid hsl(0, 0%, 0);
-  border-radius: 5%;
+  color: hsla(346, 100%, 4%, 1);
+  border: 1px solid hsla(346, 100%, 4%, 1);
+  border-radius: 10px;
   font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
   transition: all 1s ease;
   transform: scale(1);
@@ -38,7 +38,7 @@
   height: 50px;
   width: 220px;
   font-size: 18px;
-  background-color: hsl(0, 0, 0);
+  background-color: hsla(346, 100%, 4%, 1);
   color: hsl(0, 0, 100);
   border: none;
   cursor: pointer;
