--- a/src/components/common/usp/Usp.scss
+++ b/src/components/common/usp/Usp.scss
@@ -1,5 +1,5 @@
 .usp {
-  background-color: hsl(0, 0%, 0);
+  background-color: rgb(0, 0, 0);
   color: hsl(0, 0%, 100%);
   height: 30px;
   width: 100vw;
