--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -1,9 +1,3 @@
-a {
-  text-decoration: none;
-  color: hsl(0, 0%, 0);
-  font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
-}
-
 .header-container {
   height: 72px;
   background-color: hsl(0, 0%, 100);
@@ -25,6 +19,13 @@ a {
   align-items: center;
 }
 
+.left-header-section-item,
+.main-header-logo {
+  text-decoration: none;
+  color: hsl(0, 0%, 0);
+  font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
+}
+
 .left-header-section-item {
   margin-left: 65px;
 }
@@ -43,4 +44,14 @@ a {
   width: 230px;
   display: flex;
   justify-content: space-between;
+}
+
+.login-action-button {
+  height: 47px;
+  width: 112.25px;
+  background-color: hsl(0, 0%, 100);
+  color: hsl(0, 0%, 0);
+  border: 1px solid hsl(0, 0%, 0);
+  border-radius: 5%;
+  font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
 }
