--- a/src/components/common/PaymentMethods/PaymentMethods.scss
+++ b/src/components/common/PaymentMethods/PaymentMethods.scss
@@ -1,9 +1,8 @@
 .payment-methods-container {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
   background-color: hsl(0, 0%, 20%);
-  border-bottom: 1px solid hsl(0, 0, 100);
+  border-top: 1px solid hsl(0, 0, 100);
   height: 65px;
 }
 
