Remove jewelery section of category banner

--- a/src/components/common/CategoryBanner/CategoryBanner.scss
+++ b/src/components/common/CategoryBanner/CategoryBanner.scss
@@ -22,10 +22,15 @@
   background-image: url(../../../assets/images/categoryImages/mens-fashion.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  filter: grayscale(60%);
 }
 
 .category-item.category-item.category-item-right {
   background-image: url(../../../assets/images/categoryImages/womens-fashion.jpg);
+}
+
+.category-item-standalone {
+  background-image: url(../../../assets//images/categoryImages/jewellery.jpg);
 }
 
 .category-item.category-item-left:hover {
