--- a/src/components/Form/Buttons/EmailLoginButton/EmailLoginButton.scss
+++ b/src/components/Form/Buttons/EmailLoginButton/EmailLoginButton.scss
@@ -7,9 +7,12 @@
   border: none;
   border-radius: 25px;
   font-size: 18px;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 .email-button-icon {
   font-size: 40px;
   padding-right: 45px;
 }
+
