--- a/src/components/common/BrandSlider/BrandSlider.scss
+++ b/src/components/common/BrandSlider/BrandSlider.scss
@@ -6,6 +6,34 @@
   flex-direction: row;
   box-sizing: border-box;
 }
+
+.slider-item {
+  display: none;
+  padding: 80px;
+  align-items: center;
+}
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -30px;
+  padding: 16px;
+  color: hsl(0, 0, 0);
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  position: absolute;
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+
 .slider-image {
   height: 300px;
   width: 300px;
