Add register form for email

--- a/src/components/Form/Buttons/Buttons.scss
+++ b/src/components/Form/Buttons/Buttons.scss
@@ -6,7 +6,7 @@
   border: none;
   border-radius: 10px;
   font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
-  cursor: grab;
+  cursor: pointer;
   transition: all 1s ease;
   transform: scale(1);
 }
