--- a/src/pages/SignupPage/EmailSignUpPage.scss
+++ b/src/pages/SignupPage/EmailSignUpPage.scss
@@ -1,3 +1,12 @@
-Link {
-  text-decoration: none;
+.email-register-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 650px;
+}
+
+.email-register-method {
+  margin: 40px 0;
+  width: 20%;
 }
