Initial setup for brand slider

--- a/src/components/Form/Buttons/Buttons.scss
+++ b/src/components/Form/Buttons/Buttons.scss
@@ -45,6 +45,7 @@
   transition: all 1s ease;
   transform: scale(1);
   margin-left: 5px;
+  border-radius: 10px;
 }
 
 .submit-login-button:hover {
