--- a/src/components/common/usp/Usp.scss
+++ b/src/components/common/usp/Usp.scss
@@ -7,6 +7,9 @@
   justify-content: center;
   align-items: center;
   user-select: none;
+  position: absolute;
+  top: 0;
+  z-index: 25;
 }
 
 .usp-item {
