--- a/src/pages/Homepage/Home.scss
+++ b/src/pages/Homepage/Home.scss
@@ -9,7 +9,7 @@
 
 .wave-container {
   position: relative;
-  background-color: hsl(0, 0%, 0);
+  background: hsl(0, 0, 0);
   height: 1000px;
   margin-top: 20px;
 }
