--- a/src/components/common/BrandSlider/BrandSlider.scss
+++ b/src/components/common/BrandSlider/BrandSlider.scss
@@ -1,40 +1,16 @@
 .slider-container {
-  position: relative;
-  width: 100%;
-  margin: 0 100px;
   display: flex;
-  flex-direction: row;
-  box-sizing: border-box;
+  justify-content: center;
+  width: 100%;
+  padding: 0 15px;
+  overflow: hidden;
 }
 
 .slider-item {
-  display: none;
-  padding: 80px;
-  align-items: center;
+  padding: 5px;
 }
-
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -30px;
-  padding: 16px;
-  color: hsl(0, 0, 0);
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-.next {
-  position: absolute;
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
 
 .slider-image {
-  height: 300px;
-  width: 300px;
+  height: 400px;
+  padding: 5px;
 }
