Add font styles to variables

--- a/src/design-tokens/css-variables.scss
+++ b/src/design-tokens/css-variables.scss
@@ -4,4 +4,14 @@
   --color-primary: hsl(0, 0%, 10%);
   --color-secondary: hsl(0, 0%, 90%);
   --color-accent: hsl(0, 3%, 64%);
+
+  // Define the font-family
+  --font-family-standard: "Roboto Standard", Helvetica, sans-serif;
+  --font-family-italic: "Roboto Italic", Helvetica, sans-serif;
+  --font-family-bold: "Roboto Bold", Helvetica, sans-serif;
+
+  // Define the font-weights
+  --font-weight-thin: 200;
+  --font-weight-normal: 400;
+  --font-weight-bold: 700;
 }
