--- a/src/design-tokens/css-variables.scss
+++ b/src/design-tokens/css-variables.scss
@@ -1,9 +1,11 @@
 // Define variables mostly used throughout the whole project:
 :root {
   // Define the color palette
-  --color-primary: hsl(0, 0%, 10%);
-  --color-secondary: hsl(0, 0%, 90%);
+  --color-primary: hsl(0, 0%, 0%);
+  --color-secondary: hsl(0, 0%, 100%);
   --color-accent: hsl(0, 3%, 64%);
+  --color-dimmed-primary: hsl(0, 0%, 10%);
+  --color-dimmed-secondary: hsl(0, 0%, 90%);
 
   // Define the font-family
   --font-family-standard: "Roboto Standard", Helvetica, sans-serif;
