--- a/src/pages/TermsAndConditions/TermsAndConditions.scss
+++ b/src/pages/TermsAndConditions/TermsAndConditions.scss
@@ -1,5 +1,5 @@
 strong {
-  font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
+  font-family: var(--font-family-bold);
 }
 
 .terms-header {
@@ -7,7 +7,6 @@ strong {
   justify-content: center;
   text-transform: uppercase;
   font-size: 42px;
-  margin: 0;
   margin-bottom: 32px;
 }
 
