--- a/src/pages/SignupPage/SignupPage.scss
+++ b/src/pages/SignupPage/SignupPage.scss
@@ -10,7 +10,7 @@
 
 .signup-text {
   font-size: 42px;
-  font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
+  font-family: var(--font-family-bold);
   font-style: italic;
   margin: 5px 0 10px 0;
   display: flex;
