--- a/src/pages/LoginPage/LoginPage.scss
+++ b/src/pages/LoginPage/LoginPage.scss
@@ -12,7 +12,7 @@
 
 .welcome-message {
   font-size: 42px;
-  font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
+  font-family: var(--font-family-bold);
   font-style: italic;
   margin: 5px 0 10px 0;
   display: flex;
@@ -21,14 +21,14 @@
 
 .secondary-text {
   font-size: 18px;
-  font-family: "Roboto Italic", Arial, Helvetica, sans-serif;
+  font-family: var(--font-family-bold);
   margin: 0;
   display: flex;
   justify-content: center;
 }
 
 .email-form-login {
-  border-left: 0.5px solid hsl(0, 0, 25%);
+  border-left: 0.5px solid var(--color-accent);
 }
 
 .third-party-methods {
