--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -1,11 +1,10 @@
 .header-container {
-  height: 72px;
-  background-color: hsl(0, 0%, 100);
-  padding: 16px 0px;
+  height: 40px;
+  background-color: var(--color-secondary);
+  padding: 16px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: sticky;
   top: 0;
   z-index: 20;
 }
@@ -13,7 +12,7 @@
 .main-header {
   display: flex;
   justify-content: space-between;
-  margin: 0px 40px;
+  margin: 0 100px;
   width: 100%;
   height: 70px;
   align-items: center;
@@ -22,11 +21,11 @@
 .left-header-section-item,
 .main-header-logo {
   text-decoration: none;
-  color: hsl(0, 0%, 0);
-  font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
+  color: var(--color-primary);
+  font-family: var(--font-family-bold);
 }
 
-.left-header-section-item {
+.section-item {
   margin-left: 65px;
 }
 
@@ -34,7 +33,7 @@
   position: absolute;
   left: 45%;
   font-size: 32px;
-  font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
+  font-family: var(--font-family-bold);
   display: flex;
   align-items: center;
 }
@@ -46,12 +45,3 @@
   justify-content: space-between;
 }
 
-.login-action-button {
-  height: 47px;
-  width: 112.25px;
-  background-color: hsl(0, 0%, 100);
-  color: hsl(0, 0%, 0);
-  border: 1px solid hsl(0, 0%, 0);
-  border-radius: 5%;
-  font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
-}
