--- a/src/components/common/Footer/Footer.scss
+++ b/src/components/common/Footer/Footer.scss
@@ -2,25 +2,22 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
   width: 100%;
   height: 388px;
-  background-color: hsl(0, 0, 10);
+  background-color: var(--color-dimmed-primary);
 }
 
 .footer-items {
   display: flex;
   justify-content: space-between;
   width: 60%;
-  color: rgb(167, 161, 161);
-  margin-top: 35px;
+  color: var(--color-accent);
+  margin: 35px 0;
 }
 
 .footer-header {
-  font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
-  color: hsl(0, 0, 90);
+  font-family: var(--font-family-bold);
+  color: var(--color-dimmed-secondary);
 }
 
 .footer-section {
