--- a/src/components/common/Footer/Footer.scss
+++ b/src/components/common/Footer/Footer.scss
@@ -4,7 +4,7 @@
   align-items: center;
   width: 100%;
   height: 388px;
-  background-color: var(--color-dimmed-primary);
+  background-color: var(--color-primary);
 }
 
 .footer-items {
