--- a/src/components/common/LegalTermsBanner/LegalTermsBanner.scss
+++ b/src/components/common/LegalTermsBanner/LegalTermsBanner.scss
@@ -1,7 +1,7 @@
 .legal-container {
   display: flex;
   justify-content: space-between;
-  background-color: var(--color-dimmed-primary);
+  background-color: var(--color-primary);
   height: 60px;
 }
 
