Optimise button components

--- a/src/components/common/DeliveryInformation/DeliveryInformation.scss
+++ b/src/components/common/DeliveryInformation/DeliveryInformation.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   background-color: var(--color-dimmed-primary);
-  color: hsl(0, 0%, 100%);
+  color: var(--color-secondary);
   height: 65px;
   font-family: var(--font-family-bold);
 }
