--- a/src/components/Form/Buttons/CategoryActionButton/CategoryActionButton.scss
+++ b/src/components/Form/Buttons/CategoryActionButton/CategoryActionButton.scss
@@ -4,8 +4,8 @@
 }
 
 .category-button {
-  background-color: hsl(0, 0, 0);
-  color: hsl(0, 0, 100);
+  background-color: var(--color-primary);
+  color: var(--color-secondary);
   position: relative;
   width: 60%;
   height: 50px;
@@ -20,6 +20,6 @@
 }
 
 .category-button:hover {
-  background-color: hsl(0, 0, 30);
+  background-color: var(--color-accent);
   cursor: pointer;
 }
