--- a/src/components/Form/Buttons/EmailSignupButton/EmailSignupButton.scss
+++ b/src/components/Form/Buttons/EmailSignupButton/EmailSignupButton.scss
@@ -7,9 +7,9 @@
   height: 47px;
   width: 90%;
   cursor: pointer;
-  background: hsl(0, 0%, 0);
-  color: hsl(0, 0%, 100);
-  font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
+  background: var(--color-primary);
+  color: var(--color-secondary);
+  font-family: var(--font-family-bold);
   font-size: 16px;
   border: none;
   border-radius: 10px;
