--- a/src/components/Form/Buttons/FacebookLoginButton/FacebookLoginButton.scss
+++ b/src/components/Form/Buttons/FacebookLoginButton/FacebookLoginButton.scss
@@ -9,7 +9,7 @@
   font-size: 18px;
   margin-bottom: 15px;
   background-color: hsl(220, 46%, 48%);
-  color: hsl(0, 0, 95%);
+  color: var(--color-secondary);
 }
 
 .facebook-button-icon {
