--- a/src/components/Form/Buttons/FacebookLoginButton/FacebookLoginButton.scss
+++ b/src/components/Form/Buttons/FacebookLoginButton/FacebookLoginButton.scss
@@ -10,6 +10,7 @@
   margin-bottom: 15px;
   background-color: hsl(220, 46%, 48%);
   color: var(--color-secondary);
+  cursor: pointer;
 }
 
 .facebook-button-icon {
