--- a/src/design-tokens/css-variables.scss
+++ b/src/design-tokens/css-variables.scss
@@ -6,6 +6,8 @@
   --color-accent: hsl(0, 3%, 64%);
   --color-dimmed-primary: hsl(0, 0%, 10%);
   --color-dimmed-secondary: hsl(0, 0%, 90%);
+  --color-error-text: hsl(360, 100%, 50%);
+  --color-disabled-button: hsl(110, 0%, 50%);
 
   // Define the font-family
   --font-family-standard: "Roboto Standard", Helvetica, sans-serif;
