--- a/src/design-tokens/css-variables.scss
+++ b/src/design-tokens/css-variables.scss
@@ -7,7 +7,7 @@
   --color-dimmed-primary: hsl(0, 0%, 10%);
   --color-dimmed-secondary: hsl(0, 0%, 90%);
   --color-error-text: hsl(360, 100%, 50%);
-  --color-disabled-button: hsl(110, 0%, 50%);
+  --color-disabled-button: hsla(0, 0%, 50%, 0.34);
 
   // Define the font-family
   --font-family-standard: "Roboto Standard", Helvetica, sans-serif;
