Add succespage for succesful email send

--- a/src/components/Form/Buttons/ResetPasswordButton/ResetPasswordButton.scss
+++ b/src/components/Form/Buttons/ResetPasswordButton/ResetPasswordButton.scss
@@ -23,3 +23,11 @@
   color: var(--color-error-text);
   bottom: 5px;
 }
+
+.reset-text-good {
+  display: flex;
+  justify-content: center ;
+  position: relative;
+  color: var(--color-notice-good);
+  bottom: 5px;
+}
