--- a/src/design-tokens/css-variables.scss
+++ b/src/design-tokens/css-variables.scss
@@ -7,6 +7,7 @@
   --color-dimmed-primary: hsl(0, 0%, 10%);
   --color-dimmed-secondary: hsl(0, 0%, 90%);
   --color-error-text: hsl(360, 100%, 50%);
+  --color-notice-good: hsl(95, 94%, 21%);
   --color-disabled-button: hsla(0, 0%, 50%, 0.34);
 
   // Define the font-family
