--- a/src/App.scss
+++ b/src/App.scss
@@ -13,3 +13,14 @@ body {
 .nav-link {
     text-decoration: none;
 }
+
+h1 {
+  font-size: 42px;
+  font-family: var(--font-family-bold);
+  font-style: italic;
+}
+
+h5 {
+  font-size: 18px;
+  font-family: var(--font-family-bold);
+}
