--- a/src/components/Form/EmailRegisterForm/EmailRegisterForm.scss
+++ b/src/components/Form/EmailRegisterForm/EmailRegisterForm.scss
@@ -1,5 +1,9 @@
-fieldset {
-  border: none;
+.forgotten-password-input-container {
+  fieldset {
+    border: none;
+    padding: 0;
+    margin: 0;
+  }
 }
 
 .email-input,
