--- a/src/components/common/Catalog/ProductCards/ProductCards.scss
+++ b/src/components/common/Catalog/ProductCards/ProductCards.scss
@@ -12,11 +12,12 @@
 
 .product-container {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
   width: 60%;
 }
 
 .product-link {
+  width: 33%;
   display: flex;
   justify-content: center;
   text-decoration: none;
@@ -28,42 +29,35 @@
 }
 
 .product-item-container {
-  display: flex;
   justify-content: center;
   position: relative;
   margin: 15px;
   border-radius: 15px;
-  height: 300px;
+  height: 400px;
 }
 
 .product-item-title {
-  position: absolute;
-  bottom: 0;
-  height: auto;
-  text-align: center;
   margin-bottom: 5px;
 }
 
 .item-title {
   font-size: 12px;
   font-family: var(--font-family-italic);
-  margin: 0;
-  height: auto;
+  text-align: end;
 }
 
 .product-item-image-container {
-  height: 200px;
-  width: auto;
+  display: flex;
+  justify-content: center;
 }
 
 .product-item-image {
-  height: 200px;
-  width: auto;
+  height: 300px;
+  width: 65%;
 }
 
 .product-item-price {
-  position: absolute;
-  bottom: 0;
-  height: 75px;
-  font-family: var(--font-family-italic);
+  text-align: end;
+  font-family: var(--font-family-bold);
+  font-style: italic;
 }
