--- a/src/pages/MyAccountPage/MyAccountPage.scss
+++ b/src/pages/MyAccountPage/MyAccountPage.scss
@@ -5,6 +5,15 @@
   margin: 50px 10px 30px;
 }
 
+.accordion-container {
+  margin-top: 35px;
+  max-width: 650px;
+}
+
+.my-account-accordion {
+  width: 600px;
+}
+
 .account-title {
   width: 100%;
   height: 25px;
