Add form for email change

--- a/src/pages/MyAccountPage/MyAccountPage.scss
+++ b/src/pages/MyAccountPage/MyAccountPage.scss
@@ -6,7 +6,6 @@
 }
 
 .accordion-container {
-  margin-top: 35px;
   max-width: 650px;
 }
 
@@ -21,4 +20,8 @@
 
 .personal-information-container {
   margin-left: 50px;
+}
+
+.accordion-content {
+
 }
