--- a/src/components/Form/MyAccount/Accordion/Accordion.scss
+++ b/src/components/Form/MyAccount/Accordion/Accordion.scss
@@ -1,5 +1,6 @@
 .accordion-item {
   padding-left: 20px;
+  margin-top: 25px;
 }
 
 .accordion-title {
@@ -8,6 +9,7 @@
   font-family: var(--font-family-italic);
   font-size: 18px;
   cursor: pointer;
+  border-bottom: 1px solid var(--color-dimmed-primary);
 }
 
 .accordion-icon {
