--- a/src/components/Form/MyAccount/UserInfoForm/UserInfoForm.scss
+++ b/src/components/Form/MyAccount/UserInfoForm/UserInfoForm.scss
@@ -26,7 +26,7 @@
   max-width: 800px;
 }
 
-input[type=text] {
+.form-row > input[type=text] {
   padding: 10px 20px;
   margin-right: 20px;
   width: 35%;
