Add change password functionality

--- a/src/components/Form/Buttons/UserControlButtons/Buttons.scss
+++ b/src/components/Form/Buttons/UserControlButtons/Buttons.scss
@@ -17,6 +17,7 @@
   border: 1px solid hsla(346, 100%, 4%, 1);
   border-radius: 10px;
   font-family: var(--font-family-bold);
+  cursor: pointer;
 }
 
 .submit-login-button {
