Add readable error messages to login screen

--- a/src/components/Form/EmailRegisterForm/EmailRegisterForm.scss
+++ b/src/components/Form/EmailRegisterForm/EmailRegisterForm.scss
@@ -25,6 +25,8 @@
 }
 
 .text-danger {
+  display: flex;
+  justify-content: center;
   top: 5px;
   position: relative;
   color: var(--color-error-text);
