--- a/src/components/Form/MyAccount/AccountMenu/AccountMenu.scss
+++ b/src/components/Form/MyAccount/AccountMenu/AccountMenu.scss
@@ -1,17 +1,23 @@
 .my-account-menu-container {
   flex: 100%;
   max-width: 255px;
+  padding-right: 50px;
 }
 
 .my-account-menu {
   width: 100%;
   margin: 0;
   padding: 0;
+  color: var(--color-accent);
+}
+
+.my-account-menu-title {
+  color: var(--color-accent);
 }
 
 .my-account-menu-item {
   font-family: var(--font-family-italic);
-  border-bottom: 1px solid var(--color-dimmed-primary);
+  border-bottom: 1px solid var(--color-accent);
   text-decoration: none;
   list-style: none;
   width: 100%;
