Refactor homepage buttons

--- a/src/components/Form/Buttons/UserControlButton/UserControlButton.scss
+++ b/src/components/Form/Buttons/UserControlButton/UserControlButton.scss
@@ -1,15 +1,4 @@
-.sign-up-action-button {
-  height: 47px;
-  width: 112.25px;
-  background-color: var(--color-primary);
-  color: var(--color-secondary);
-  border: none;
-  border-radius: 10px;
-  font-family: var(--font-family-bold);
-  cursor: pointer;
-}
-
-.login-action-button {
+.user-control-button {
   height: 47px;
   width: 112.25px;
   background-color: var(--color-secondary);
