Refactor submit login button

--- a/src/components/Form/Buttons/MyAccountButton/FunctionalButton.scss
+++ b/src/components/Form/Buttons/MyAccountButton/FunctionalButton.scss
@@ -1,10 +1,4 @@
-.change-credentials-button-container {
-  display: flex;
-  justify-content: center;
-  width: 85%;
-}
-
-.change-credentials-button {
+.functional-button {
   height: 50px;
   width: 220px;
   font-size: 18px;
