--- a/src/components/Form/Buttons/RedirectButton/RedirectButton.scss
+++ b/src/components/Form/Buttons/RedirectButton/RedirectButton.scss
@@ -21,7 +21,8 @@
 }
 
 .error-container {
-  position: absolute;
-  margin-top: 65px;
+  margin-top: 10px;
   color: red;
+  display: flex;
+  justify-content: center;
 }
