Add styling for button container

--- a/src/pages/MyAccountPage/MyAccountPage.scss
+++ b/src/pages/MyAccountPage/MyAccountPage.scss
@@ -42,7 +42,7 @@
   padding: 10px 20px;
 }
 
-.delete-account-button-container {
+.button-container {
   display: flex;
   justify-content: center;
 }
