Refactor change password form

--- a/src/components/Form/Buttons/MyAccountButton/FunctionalButton.scss
+++ b/src/components/Form/Buttons/MyAccountButton/FunctionalButton.scss
@@ -8,3 +8,8 @@
   cursor: pointer;
   border-radius: 10px;
 }
+
+.functional-button:disabled {
+  background: var(--color-disabled-button);
+  cursor: auto;
+}
