Refactor change email form

--- a/src/components/Form/MyAccount/Accordion/Accordion.scss
+++ b/src/components/Form/MyAccount/Accordion/Accordion.scss
@@ -18,6 +18,8 @@
 
 .my-account-item-title, .my-account-form {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 
