--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,10 @@ h5 {
   animation: loader-spin 1s infinite;
 }
 
+.error-message {
+  color: red;
+}
+
 @keyframes loader-spin {
   0% {
     transform: rotate(0deg);
