--- a/src/components/common/Content/FullWidthBanner/FullWidthBanner.scss
+++ b/src/components/common/Content/FullWidthBanner/FullWidthBanner.scss
@@ -1,9 +1,9 @@
 .full-width-banner-content {
   display: flex;
-  margin-left: auto;
-  margin-right: auto;
   flex: 1 1 0;
-  background-color: rgba(228,215,207,255);
+  background-color: rgb(217, 205, 202);
+  margin: 0 auto 25px;
+  height: 850px;
 }
 
 .full-width-left-container {
@@ -40,27 +40,19 @@
 }
 
 .banner-image {
+  position: absolute;
   display: flex;
   height: 800px;
   margin: 20px 10px;
-  animation: homepage-media 1.5s;
+  animation: homepage-media 2s;
   border-radius: 20%;
 }
 
 @keyframes homepage-media {
-  20% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes homepage-actionmenu {
   0% {
-    opacity: 0;
+    bottom: -1000px;
   }
   100% {
-    opacity: 1;
+    bottom: -260px;
   }
 }
