Add border shadow to homepage image

--- a/src/design-tokens/css-variables.scss
+++ b/src/design-tokens/css-variables.scss
@@ -9,6 +9,7 @@
   --color-error-text: hsl(360, 100%, 50%);
   --color-notice-good: hsl(95, 94%, 21%);
   --color-disabled-button: hsla(0, 0%, 50%, 0.34);
+  --color-container-background: hsl(12, 16%, 82%);
 
   // Define the font-family
   --font-family-standard: "Roboto Standard", Helvetica, sans-serif;
