--- a/src/components/common/Content/FullWidthBanner/FullWidthBanner.scss
+++ b/src/components/common/Content/FullWidthBanner/FullWidthBanner.scss
@@ -1,7 +1,7 @@
 .full-width-banner-content {
   display: flex;
   flex: 1 1 0;
-  background-color: rgb(217, 205, 202);
+  background-color: var(--color-container-background);
   margin: 0 auto 25px;
   height: 850px;
 }
@@ -40,19 +40,19 @@
 }
 
 .banner-image {
-  position: absolute;
   display: flex;
   height: 800px;
   margin: 20px 10px;
   animation: homepage-media 2s;
   border-radius: 20%;
+  box-shadow: 10px 10px 5px var(--color-accent);
 }
 
 @keyframes homepage-media {
   0% {
-    bottom: -1000px;
+    opacity: 0;
   }
   100% {
-    bottom: -260px;
+    opacity: 1;
   }
 }
