--- a/src/components/common/Content/UspBanner/UspBanner.scss
+++ b/src/components/common/Content/UspBanner/UspBanner.scss
@@ -1,9 +1,22 @@
 .usp__container {
-  display: flex;
   padding: 20px 10rem;
   opacity: 0;
   transform: scale(0.75);
   transition: 2s;
+}
+
+.usp-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 450px;
+
+}
+
+.usp-container-flipped {
+  background-color: var(--color-accent);
+  color: var(--color-secondary);
+  display: flex;
 }
 
 .usp__container--zoom {
@@ -14,13 +27,17 @@
 
 .usp__content-container {
   display: flex;
-  flex: 1 1 0;
   justify-content: space-around;
   align-items: center;
+  width: 60%;
+}
+
+.usp__image-container {
+  display: flex;
 }
 
 .usp__image {
-  max-height: 500px;
+  max-height: 300px;
   width: auto;
   box-shadow: 10px 10px 5px var(--color-accent);
   border-radius: 15%;
