--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -1,49 +1,10 @@
 .header-container {
-  height: 40px;
+  height: auto;
   background-color: var(--color-secondary);
-  padding: 16px 0;
+  padding: 16px 25px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   top: 0;
-  z-index: 20;
-}
-
-.main-header {
-  display: flex;
-  justify-content: space-between;
-  width: 50%;
-  margin-left: 100px;
-  height: 70px;
-  align-items: center;
-  column-count: 2;
-}
-
-.left-header-section-item,
-.main-header-logo {
-  text-decoration: none;
-  color: var(--color-primary);
-  font-family: var(--font-family-bold);
-}
-
-.section-item {
-  margin-left: 65px;
-}
-
-.main-header-logo {
-  font-size: 32px;
-  font-family: var(--font-family-bold);
-}
-
-.right-header-section {
-  height: 50px;
-  width: 230px;
-  display: flex;
-  justify-content: space-between;
-  padding-right: 25px;
-}
-
-.section-item-active {
-  font-family: var(--font-family-bold);
-  border-bottom: 1px solid var(--color-primary);
+  flex: 1 1 0;
 }
