Adjust homepage styling

--- a/src/components/common/DeliveryInformation/DeliveryInformation.scss
+++ b/src/components/common/DeliveryInformation/DeliveryInformation.scss
@@ -1,3 +1,7 @@
+#usp-banner-footer {
+  border-top: 1px solid var(--color-secondary);
+}
+
 .footer-usp {
   display: flex;
   justify-content: center;
