--- a/src/components/common/Content/UspBanner/UspBanner.scss
+++ b/src/components/common/Content/UspBanner/UspBanner.scss
@@ -7,16 +7,14 @@
 
 .usp-container {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%;
   height: 450px;
-
 }
 
 .usp-container-flipped {
-  background-color: var(--color-accent);
-  color: var(--color-secondary);
   display: flex;
+  justify-content: flex-end;
 }
 
 .usp__container--zoom {
@@ -29,7 +27,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 60%;
+  width: 75%;
 }
 
 .usp__image-container {
