--- a/src/pages/Homepage/Home.scss
+++ b/src/pages/Homepage/Home.scss
@@ -1,4 +1,3 @@
-
 .homepage-actions {
   position: relative;
   width: 33%;
@@ -63,7 +62,7 @@
 
 .main-content-container {
   position: relative;
-  background-color: var(--color-dimmed-primary);
+  background-color: var(--color-primary);
   color: var(--color-secondary);
 }
 
@@ -74,7 +73,7 @@
   left: 0;
   width: 100%;
   height: 100px;
-  background-color: var(--color-dimmed-primary);
+  background-color: var(--color-primary);
   clip-path: polygon(100% 0, 0 100%, 100% 100%);
 }
 
@@ -85,13 +84,13 @@
   left: 0;
   width: 100%;
   height: 100px;
-  background-color: var(--color-dimmed-secondary);
+  background-color: var(--color-secondary);
   clip-path: polygon(0 100%, 100% 0, 100% 100%);
 }
 
 .main-content-container-flipped {
   position: relative;
-  background-color: var(--color-dimmed-secondary);
+  background-color: var(--color-secondary);
   color: var(--color-primary);
 }
 
