--- a/src/components/common/Catalog/ProductCards/ProductCards.scss
+++ b/src/components/common/Catalog/ProductCards/ProductCards.scss
@@ -21,6 +21,7 @@
   text-decoration: none;
   color: inherit;
   margin: 10px 20px;
+  flex: 1 1 0;
 }
 
 .product-link:visited, .product.link:hover, .product-link:focus {
