--- a/src/components/common/Catalog/ProductCards/ProductCards.scss
+++ b/src/components/common/Catalog/ProductCards/ProductCards.scss
@@ -1,19 +1,10 @@
-.product-list-container {
-  margin-top: 25px;
-}
-
-.product-list-grid {
-  overflow: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
 .product-container {
-  display: flex;
-  flex-wrap: wrap;
+    margin-top: 25px;
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   width: 60%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .product-link {
