--- a/src/components/common/Content/GridRowBanner/GridRowBanner.scss
+++ b/src/components/common/Content/GridRowBanner/GridRowBanner.scss
@@ -13,6 +13,7 @@
 .grid-row-image {
   width: 550px;
   height: auto;
+  margin: 0 15px;
 }
 
 .grid-row-text {
@@ -22,6 +23,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 0 15px;
 }
 
 .section-title {
