--- a/src/components/common/MyAccount/AccountMenu/AccountMenu.scss
+++ b/src/components/common/MyAccount/AccountMenu/AccountMenu.scss
@@ -5,6 +5,8 @@
 }
 
 .my-account-menu {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -23,4 +25,5 @@
   width: 100%;
   height: 25px;
   margin-top: 15px;
+  color: inherit;
 }
