--- a/src/components/common/Header/HeaderComponents/Navigation/Navigation.scss
+++ b/src/components/common/Header/HeaderComponents/Navigation/Navigation.scss
@@ -1,9 +1,6 @@
 .main-header {
   display: flex;
   justify-content: space-between;
-  width: 50%;
-  margin-left: 100px;
-  height: 70px;
   align-items: center;
 }
 
@@ -25,9 +22,8 @@
 
 .right-header-section {
   height: 50px;
-  width: 230px;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding-right: 25px;
 }
 
