Refactor login form

--- a/src/components/Form/Forms/LoginForm/LoginForm.scss
+++ b/src/components/Form/Forms/LoginForm/LoginForm.scss
@@ -1,21 +1,11 @@
-fieldset {
-  border: none;
-}
 
-.email-input,
-.password-input {
-  width: 100%;
-  height: 50px;
-  font-size: 18px;
-  border: 0.5px solid hsl(0, 0, 50);
-}
-
-.email-input:focus,
-.password-input:focus {
-  outline: none;
-}
-
-.submit-login {
-  display: flex;
-  justify-content: center;
-}
+//
+//.email-input:focus,
+//.password-input:focus {
+//  outline: none;
+//}
+//
+//.submit-login {
+//  display: flex;
+//  justify-content: center;
+//}
