--- a/src/components/Form/Forms/InputField/InputField.scss
+++ b/src/components/Form/Forms/InputField/InputField.scss
@@ -1,6 +1,14 @@
+fieldset {
+  border: none;
+}
+
 .input-field {
   width: 100%;
   height: 50px;
   font-size: 18px;
   border: 0.5px solid gray;
+}
+
+.input-field:focus {
+  outline: none;
 }
