--- a/src/components/Form/Forms/InputField/InputField.scss
+++ b/src/components/Form/Forms/InputField/InputField.scss
@@ -12,3 +12,10 @@ fieldset {
 .input-field:focus {
   outline: none;
 }
+
+.input-field.true {
+  margin-top: 15px;
+  height: 35px;
+  width: 75%;
+  border: 1px solid var(--color-primary);
+}
