--- a/src/components/common/MyAccount/Accordion/Accordion.scss
+++ b/src/components/common/MyAccount/Accordion/Accordion.scss
@@ -16,22 +16,14 @@
   font-size: 24px;
 }
 
-.my-account-item-title, .my-account-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.change-email-input, .change-password-input {
-  margin-top: 15px;
-  height: 35px;
-  width: 75%;
-  border: 1px solid var(--color-primary);
-}
-
 .change-credentials-container {
   padding: 5px 20px 15px 20px;
+}
+
+.my-account-form > fieldset {
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 .change-credentials-form {
