Refactor change email form

--- a/src/components/Form/Forms/InputField/InputField.scss
+++ b/src/components/Form/Forms/InputField/InputField.scss
@@ -13,7 +13,7 @@ fieldset {
   outline: none;
 }
 
-.input-field.true {
+.input-field.my-account {
   margin-top: 15px;
   height: 35px;
   width: 75%;
