Remove item count and small styling fix for minicart

--- a/src/components/Form/Buttons/AddToCartButton/AddToCartButton.scss
+++ b/src/components/Form/Buttons/AddToCartButton/AddToCartButton.scss
@@ -1,11 +1,10 @@
-
-
 .add-to-cart-button {
   height: 50px;
   background-color: var(--color-primary);
   color: var(--color-secondary);
   border: none;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .product-price,
