--- a/src/components/common/CartSummary/CartSummary.scss
+++ b/src/components/common/CartSummary/CartSummary.scss
@@ -23,9 +23,9 @@
 .cart-totals {
   display: flex;
   justify-content: space-between;
-  padding-top: 10px;
+  padding: 15px;
 }
 
-.cart-totals > tr {
+.cart-totals.total {
   font-family: var(--font-family-bold);
 }
