--- a/src/components/common/Catalog/ProductDetail/ProductDetail.scss
+++ b/src/components/common/Catalog/ProductDetail/ProductDetail.scss
@@ -1,6 +1,7 @@
 .product-detail-container {
   display: flex;
   margin: 100px 0;
+  height: 500px;
 }
 
 .product-image-container {
@@ -10,7 +11,7 @@
 }
 
 .product-image {
-  width: 300px;
+  width: auto;
 }
 
 .product-details {
