--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -14,7 +14,11 @@
   width: 60%;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 30px;
+  padding: 30px 0;
+}
+
+.cart-action-buttons > span {
+  margin-left: 5px;
 }
 
 .cart-item-table {
@@ -66,4 +70,12 @@ table {
 .cart-image {
   width: 110px;
   height: 160px;
+}
+
+.cart-footer {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
 }
