--- a/src/components/common/Minicart/MinicartMenu/MinicartMenu.scss
+++ b/src/components/common/Minicart/MinicartMenu/MinicartMenu.scss
@@ -19,7 +19,7 @@
   transform: translateY(0);
   z-index: 10;
   padding: 5px;
-  max-height: 50vh;
+  max-height: 450px;
 }
 
 .minicart-menu > a {
