--- a/src/components/common/Modal/CartModal/CartModal.scss
+++ b/src/components/common/Modal/CartModal/CartModal.scss
@@ -8,10 +8,19 @@
   top: 0;
   left: 0;
   box-sizing: border-box;
-  transition: all 0.3s ease-in-out;
-  animation: show .7s;
   height: 150px;
 }
+
+.modal-container-shown {
+  top: 0;
+  transition: all 500ms linear;
+}
+
+.modal-container-hidden {
+  top: -150px;
+  transition: all 500ms linear 2s;
+}
+
 .modal-content {
   display: flex;
   align-items: center;
@@ -21,13 +30,4 @@
 
 .modal-icon {
   font-size: 24px;
-}
-
-@keyframes show {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 100%;
-  }
 }
