--- a/src/components/common/Modal/CartModal/CartModal.scss
+++ b/src/components/common/Modal/CartModal/CartModal.scss
@@ -1,4 +1,4 @@
-.modal-container {
+.cart-modal-container {
   position: fixed;
   z-index: 500;
   background-color: var(--color-secondary);
@@ -11,12 +11,12 @@
   height: 200px;
 }
 
-.modal-container-shown {
+.cart-modal-container-shown {
   top: 0;
   transition: all 250ms linear;
 }
 
-.modal-container-hidden {
+.cart-modal-container-hidden {
   top: -250px;
   transition: all 500ms linear 2s;
 }
