--- a/src/pages/Homepage/Home.scss
+++ b/src/pages/Homepage/Home.scss
@@ -1,98 +1,114 @@
-.homepage-actions {
-  position: relative;
-  width: 33%;
-  top: 550px;
-  left: 300px;
-  right: 60px;
-  animation: homepage-actionmenu 3s;
+.main-header {
+  visibility: hidden;
+  width: 100%;
 }
 
-.homepage-action-buttons {
-  width: 230px;
+.main-header-logo {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
-.action-text-main,
-.action-text-secondairy {
-  color: var(--color-secondary);
-  margin-bottom: 10px;
-  font-family: var(--font-family-bold);
+.right-header-section {
+  display: none;
 }
 
-.action-text-main {
-  font-size: 38px;
-}
 
-.action-text-secondairy {
-  font-size: 18px;
-}
-
-.homepage-media {
-  position: absolute;
-  right: 60px;
-  top: 60px;
-  border-radius: 20%;
-  animation: homepage-media 1.5s;
-}
-
-@keyframes homepage-media {
-  0% {
-    opacity: 0;
+@media screen and (min-width: 1280px) {
+  .homepage-actions {
+    position: relative;
+    width: 33%;
+    top: 550px;
+    left: 300px;
+    right: 60px;
+    animation: homepage-actionmenu 3s;
   }
-  100% {
-    opacity: 1;
+
+  .homepage-action-buttons {
+    width: 230px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .action-text-main,
+  .action-text-secondairy {
+    color: var(--color-secondary);
+    margin-bottom: 10px;
+    font-family: var(--font-family-bold);
+  }
+
+  .action-text-main {
+    font-size: 38px;
+  }
+
+  .action-text-secondairy {
+    font-size: 18px;
+  }
+
+  .homepage-media {
+    position: absolute;
+    right: 60px;
+    top: 60px;
+    border-radius: 20%;
+    animation: homepage-media 1.5s;
+  }
+
+  @keyframes homepage-media {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @keyframes homepage-actionmenu {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  .main-area-content {
+    width: 600px;
+    height: auto;
+    border-radius: 20%;
+  }
+
+  .main-content-container {
+    position: relative;
+    background-color: var(--color-primary);
+    color: var(--color-secondary);
+  }
+
+  .main-content-container-flipped:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background-color: var(--color-primary);
+    clip-path: polygon(100% 0, 0 100%, 100% 100%);
+  }
+
+  .main-content-container-flipped:before {
+    content: '';
+    position: absolute;
+    top: -100px;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background-color: var(--color-secondary);
+    clip-path: polygon(0 100%, 100% 0, 100% 100%);
+  }
+
+  .main-content-container-flipped {
+    position: relative;
+    background-color: var(--color-secondary);
+    color: var(--color-primary);
   }
 }
-
-@keyframes homepage-actionmenu {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-.main-area-content {
-  width: 600px;
-  height: auto;
-  border-radius: 20%;
-}
-
-.main-content-container {
-  position: relative;
-  background-color: var(--color-primary);
-  color: var(--color-secondary);
-}
-
-.main-content-container-flipped:after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  background-color: var(--color-primary);
-  clip-path: polygon(100% 0, 0 100%, 100% 100%);
-}
-
-.main-content-container-flipped:before {
-  content: '';
-  position: absolute;
-  top: -100px;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  background-color: var(--color-secondary);
-  clip-path: polygon(0 100%, 100% 0, 100% 100%);
-}
-
-.main-content-container-flipped {
-  position: relative;
-  background-color: var(--color-secondary);
-  color: var(--color-primary);
-}
-
 
 
