Add cart to mobile header

--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -1,15 +1,25 @@
 .header-container {
-  display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-  text-align: center;
-  align-items: center;
-  align-self: center;
-  height: auto;
-  background-color: var(--color-secondary);
-  padding: 16px 25px;
-  top: 0;
-  flex: 1 1 0;
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  padding-top: 25px;
+  flex: 1 1;
+}
+
+
+@media screen and (min-width: 1280px) {
+  .header-container {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    text-align: center;
+    align-items: center;
+    align-self: center;
+    height: auto;
+    background-color: var(--color-secondary);
+    padding: 16px 25px;
+    top: 0;
+    flex: 1 1 0;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
