--- a/src/components/common/Header/Minicart/MinicartMenu/MinicartMenu.scss
+++ b/src/components/common/Header/Minicart/MinicartMenu/MinicartMenu.scss
@@ -1,3 +1,9 @@
+.menu-container.cart {
+  font-size: 22px;
+  position: absolute;
+  right: 20px;
+}
+
 .minicart-menu {
   background: #ffffff;
   border-radius: 8px;
@@ -21,4 +27,5 @@
   padding: 5px;
   max-height: 450px;
 }
+
 
