--- a/src/components/common/Header/HeaderComponents/Navigation/Navigation.scss
+++ b/src/components/common/Header/HeaderComponents/Navigation/Navigation.scss
@@ -16,18 +16,27 @@
 }
 
 .main-header-logo {
-  font-size: 32px;
   font-family: var(--font-family-bold);
-}
-
-.right-header-section {
-  height: 50px;
-  display: flex;
-  justify-content: flex-end;
-  padding-right: 25px;
+  font-size: 18px;
 }
 
 .section-item-active {
   font-family: var(--font-family-bold);
   border-bottom: 1px solid var(--color-primary);
+}
+
+@media screen and (min-width: 1280px) {
+  .right-header-section {
+    padding-right: 25px;
+  }
+
+  .main-header-logo {
+    font-size: 32px;
+  }
+
+  .right-header-section {
+    height: 50px;
+    display: flex;
+    justify-content: flex-end;
+  }
 }
