--- a/src/pages/Homepage/Home.scss
+++ b/src/pages/Homepage/Home.scss
@@ -4,6 +4,11 @@
 }
 
 @media screen and (min-width: 1280px) {
+
+  .main-header {
+    display: flex;
+  }
+
   .homepage-actions {
     position: relative;
     width: 33%;
