--- a/src/components/common/Content/PaymentMethods/PaymentMethods.scss
+++ b/src/components/common/Content/PaymentMethods/PaymentMethods.scss
@@ -4,12 +4,17 @@
   background-color: var(--color-dimmed-primary);
   border-top: 1px solid var(--color-secondary);
   border-bottom: 1px solid var(--color-secondary);
-  height: 65px;
-
 }
 
 .container-item {
   width: 100px;
-  height: auto;
-  padding: 0 20px;
+  height: 100px;
+}
+
+
+@media screen and (min-width: 1280px) {
+  .container-item {
+    height: auto;
+    padding: 0 20px;
+  }
 }
