--- a/src/components/common/LegalTermsBanner/LegalTermsBanner.scss
+++ b/src/components/common/LegalTermsBanner/LegalTermsBanner.scss
@@ -1,29 +1,43 @@
 .legal-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   background-color: var(--color-primary);
-  height: 100px;
+  height: 25px;
+  padding-top: 10px;
+}
+
+.legal-item-left {
+  display: none;
 }
 
 .legal-container-item {
   color: var(--color-accent);
 }
 
-.legal-item-left {
-  margin-left: 20%;
-}
-
-.legal-item-right {
-  margin-right: 20%;
-}
-
-.legal-row-items {
-  margin-right: 10px;
-  font-weight: normal;
-}
-
 .footer-link {
   color: var(--color-accent);
   font-weight: normal;
   text-decoration: none;
+}
+
+@media screen and (min-width: 1280px) {
+  .legal-container {
+    height: 100px;
+  }
+
+  .legal-item-left {
+    display: flex;
+    margin-left: 20%;
+  }
+
+  .legal-item-right {
+    margin-right: 20%;
+  }
+
+  .legal-row-items {
+    margin-right: 10px;
+    font-weight: normal;
+  }
+
+
 }
