--- a/src/components/common/Content/CategoryBanner/CategoryBanner.scss
+++ b/src/components/common/Content/CategoryBanner/CategoryBanner.scss
@@ -1,76 +1,114 @@
 .category-container {
-  height: 650px;
-  position: relative;
-  margin: 10px;
-}
-
-.category-items-side-by-side {
-  display: flex;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-.category-item {
-  position: absolute;
-  width: 66%;
-  height: 650px;
-  transition: all 0.5s ease-out;
-}
-
-.category-item.category-item-left,
-.category-item.category-item.category-item-right {
-  background-image: url(../../../../assets/images/categoryImages/mens-fashion.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  filter: grayscale(60%);
+  padding-top: 35px;
 }
 
 .category-item.category-item.category-item-right {
   background-image: url(../../../../assets/images/categoryImages/womens-fashion.jpg);
 }
 
-.category-item.category-item-left:hover {
-  width: 75%;
-  z-index: 1;
+.category-item.category-item.category-item-left {
+  background-image: url(../../../../assets/images/categoryImages/mens-fashion.jpg);
 }
 
-.category-item.category-item-right:hover {
-  width: 75%;
-  z-index: 1;
-}
-
-.category-item.category-item-left {
-  left: 0;
-  top: 0;
-  clip-path: polygon(0 0, 100% 0%, 50% 100%, 0% 100%);
-}
-
-.category-item.category-item-right {
-  right: 0;
-  top: 0;
-  clip-path: polygon(50% 0, 100% 0%, 100% 100%, 0% 100%);
+.category-item.category-item-left,
+.category-item.category-item.category-item-right {
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: grayscale(90%);
+  height: 250px;
+  width: auto;
 }
 
 .category-text {
+  position: absolute;
+  bottom: 0;
+  margin-left: 25px;
   font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
   font-style: italic;
   user-select: none;
 }
 
-.category-text-left {
-  width: 33%;
-  position: relative;
-  top: 40%;
-  left: 25%;
-}
-
-.category-text-right {
-  width: 33%;
-  right: 0;
-  position: absolute;
-  top: 40%;
-}
-
 .category-link {
-  color: black;
+  color: var(--color-secondary);
+}
+
+@media screen and (min-width: 1280px) {
+  .category-container {
+    height: 650px;
+    position: relative;
+    margin: 10px;
+  }
+
+  .category-items-side-by-side {
+    display: flex;
+    width: 100%;
+    box-sizing: border-box;
+  }
+
+  .category-item {
+    position: absolute;
+    width: 66%;
+    height: 650px;
+    transition: all 0.5s ease-out;
+  }
+
+  .category-item.category-item-left,
+  .category-item.category-item.category-item-right {
+    background-image: url(../../../../assets/images/categoryImages/mens-fashion.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: grayscale(60%);
+    height: 650px;
+    width: 66%;
+  }
+
+  .category-item.category-item.category-item-right {
+    background-image: url(../../../../assets/images/categoryImages/womens-fashion.jpg);
+  }
+
+  .category-item.category-item-left:hover {
+    width: 75%;
+    z-index: 1;
+  }
+
+  .category-item.category-item-right:hover {
+    width: 75%;
+    z-index: 1;
+  }
+
+  .category-item.category-item-left {
+    left: 0;
+    top: 0;
+    clip-path: polygon(0 0, 100% 0%, 50% 100%, 0% 100%);
+  }
+
+  .category-item.category-item-right {
+    right: 0;
+    top: 0;
+    clip-path: polygon(50% 0, 100% 0%, 100% 100%, 0% 100%);
+  }
+
+  .category-text {
+    font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
+    font-style: italic;
+    user-select: none;
+  }
+
+  .category-text-left {
+    width: 33%;
+    position: relative;
+    top: 40%;
+    left: 25%;
+  }
+
+  .category-text-right {
+    width: 33%;
+    right: 0;
+    position: absolute;
+    top: 40%;
+  }
+
+  .category-link {
+    color: black;
+  }
 }
