--- a/src/components/common/Footer/Footer.scss
+++ b/src/components/common/Footer/Footer.scss
@@ -1,28 +1,19 @@
 .footer-container {
   display: flex;
-  justify-content: center;
   align-items: center;
   width: 100%;
-  height: 388px;
   background-color: var(--color-primary);
 }
 
 .footer-items {
-  display: flex;
-  justify-content: space-between;
   width: 60%;
   color: var(--color-accent);
-  margin: 35px 0;
+  margin-left: 35px;
 }
 
 .footer-header {
   font-family: var(--font-family-bold);
   color: var(--color-dimmed-secondary);
-}
-
-.footer-section {
-  display: flex;
-  flex-direction: column;
 }
 
 .footer-list {
@@ -32,10 +23,42 @@
 }
 
 .footer-list li {
-  margin: 10px 0 10px 0;
+  margin: 5px 0;
 }
 
 .social-icon {
   margin: 5px;
-  font-size: 30px;
+  font-size: 22px;
+}
+
+
+@media screen and (min-width: 1280px) {
+
+  .footer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 388px;
+  }
+
+  .footer-items {
+    display: flex;
+    justify-content: space-between;
+    margin: 35px 0;
+  }
+
+  .footer-section {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer-list li {
+    margin: 10px 0;
+  }
+
+  .social-icon {
+    margin: 5px;
+    font-size: 30px;
+  }
 }
