--- a/src/pages/Homepage/Home.scss
+++ b/src/pages/Homepage/Home.scss
@@ -3,8 +3,11 @@
   width: 100%;
 }
 
-@media screen and (min-width: 1280px) {
+.footer-usp {
+  display: none;
+}
 
+@media screen and (min-width: 1280px) {
   .main-header {
     display: flex;
   }
